resolution mobile fix v2

--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -1,4 +1,3 @@
-
 #table-localstorage {
     border: 1px solid #ccc;
     border-collapse: collapse;
@@ -45,6 +44,9 @@
 }
   
 @media screen and (max-width: 840px) {
+  section {
+    height: 70vh;
+  }
   #table-localstorage {
     border: 0;
   }
